src/test/deca/syntax/parser/valid/test/test_pars_val_instruction_primary__expr_readint.deca
// Description:
//    Programme minimaliste testant l'arbre d'instruction pour une primary_expr.
//
// Resultats:
//    
//
// Historique:
//    cree le 01/01/2023


{
    readInt();
}