src/test/deca/syntax/parser/invalid/test/pars_inv_intruction_inequality_expr__multiple_oubli_expr.deca
// Description:
//    tests de programme incorrect syntaxiquement pour les inequality_expr
//
// Resultats:
//    Ligne 11 : Erreur ( oubli expr2)
//    
//
// Historique:
//    cree le 04/01/2023
{
    expression_bidon1 <> 123 ;
}
